After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671303 - totem doesn't start
totem doesn't start
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
unspecified
Other Linux
: Normal critical
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-03-04 11:00 UTC by sangu
Modified: 2012-03-13 16:56 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sangu 2012-03-04 11:00:18 UTC
# gdb totem coredump
Core was generated by `totem'.
Program terminated with signal 11, Segmentation fault.
  • #0 cogl_object_ref
    at ./cogl-object.c line 44
  • #0 cogl_object_ref
    at ./cogl-object.c line 44
  • #1 _cogl_framebuffer_init
    at ./cogl-framebuffer.c line 157
  • #2 cogl_onscreen_new
    at ./cogl-onscreen.c line 99
  • #3 clutter_stage_x11_realize
    at x11/clutter-stage-x11.c line 546
  • #4 clutter_stage_realize
    at ./clutter-stage.c line 758
  • #5 g_closure_invoke
    at gclosure.c line 774
  • #6 signal_emit_unlocked_R
    at gsignal.c line 3340
  • #7 g_signal_emit_valist
    at gsignal.c line 3033
  • #8 g_signal_emit
    at gsignal.c line 3090
  • #9 clutter_actor_realize
    at ./clutter-actor.c line 1531
  • #10 _clutter_stage_manager_set_default_stage
    at ./clutter-stage-manager.c line 224
  • #11 clutter_stage_constructed
    at ./clutter-stage.c line 1614
  • #12 g_object_newv
    at gobject.c line 1741
  • #13 g_object_new
    at gobject.c line 1542
  • #14 clutter_stage_new
    at ./clutter-stage.c line 3275
  • #15 gtk_clutter_embed_init
    at ./gtk-clutter-embed.c line 730
  • #16 g_type_create_instance
    at gtype.c line 1884
  • #17 g_object_constructor
    at gobject.c line 1849
  • #18 g_object_newv
  • #19 g_object_new
    at gobject.c line 1542
  • #20 bacon_video_widget_new
    from /lib64/libtotem.so.0
  • #21 video_widget_create
    from /lib64/libtotem.so.0
  • #22 _start

totem-3.3.90-1.fc17.x86_64
glib2-2.31.18-1.fc17.x86_64
cogl-1.9.6-1.fc17.x86_64
clutter-1.9.12-1.fc17.x86_64
clutter-gtk-1.1.2-4.fc17.x86_64
gtk3-3.3.16-1.fc17.x86_64
Comment 1 Bastien Nocera 2012-03-04 14:20:26 UTC
Looks like cogl or clutter, or something.
Comment 2 Robert Bragg 2012-03-13 14:03:17 UTC
I'm not sure about this.

cogl_onscreen_new is being called by clutter_stage_x11_realize with a NULL context, where that context comes from backend->cogl_context.

backend->cogl_context is setup in clutter_backend_real_create_context and that does have error checking so we should have failed to initialize clutter if we failed to create a cogl context.

I'm wondering if totem is somehow trying to create a stage before it has initialized clutter?

I'm reassigning this as a totem bug for now, unless we get more information.
Comment 3 Bastien Nocera 2012-03-13 16:56:32 UTC
It's more likely that clutter fails to init properly, and we weren't checking for that (we didn't get to see the possible warnings with that stacktrace).

commit afa92c9656b05e28be052d35dc877dd361393e6b
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Mar 13 17:31:07 2012 +0100

    main: Handle Clutter GTK failing to initialise
    
    https://bugzilla.gnome.org/show_bug.cgi?id=671303