main: Handle Clutter GTK failing to initialise

https://bugzilla.gnome.org/show_bug.cgi?id=671303