src/backend/bacon-video-widget-gst-0.10.c
@@ -5928,7 +5928,8 @@ bacon_video_widget_get_current_frame (BaconVideoWidget * bvw)
 GOptionGroup*
 bacon_video_widget_get_option_group (void)
 {
-  gtk_clutter_init (NULL, NULL);
+  if (gtk_clutter_init (NULL, NULL) != CLUTTER_INIT_SUCCESS)
+    return NULL;
   return gst_init_get_option_group ();
 }
 
